more ui changes

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "element-plus": "^1.1.0-beta.15",
     "highcharts": "^9.2.2",
     "highcharts-vue": "^1.4.0",
+    "v-calendar": "^3.0.0-alpha.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-rc.1",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.11",
+    "vue3-date-time-picker": "^2.0.0",
+    "vuetify-daterange-picker": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
